The readValue method overloaded; Refactoring of the fillOption method performed; Other minor fixes